fabric/testdata/out/ing_spp-homer-reject-http-route-spp-homer-master-367.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    metacontroller.k8s.io/last-applied-configuration: '{"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"zalando.org/aws-load-balancer-ssl-policy":"ELBSecurityPolicy-FS-2018-06","zalando.org/skipper-routes":"PathSubtree(\"/\")
      \u0026\u0026 Header(\"X-Forwarded-Proto\", \"http\") -\u003e unverifiedAuditLog(\"sub\")
      -\u003e status(400) -\u003e inlineContent(\"{\\\"title\\\":\\\"Gateway Rejected\\\",\\\"status\\\":400,\\\"detail\\\":\\\"TLS
      is required\\\",\\\"type\\\":\\\"https://cloud.docs.zalando.net/howtos/ingress/#redirect-http-to-https\\\"}\")
      -\u003e \u003cshunt\u003e"},"labels":{"controller-uid":"3929699d-cba0-11e8-90e2-0618dc6898fa","deployment-id":"d-nq71pi3pjq8siqfx3i5toz322","pipeline-id":"l-o49bo3978wd8mgk5o73i8aim6"},"name":"spp-homer-reject-http-route-spp-homer-master-367","namespace":"default"},"spec":{"rules":[{"host":"spp-homer-master-367.smart-product-platform-test.zalan.do","http":{"paths":[{"backend":{"serviceName":"spp-homer-master-367","servicePort":8080},"pathType":"ImplementationSpecific"}]}}]}}'
    zalando.org/aws-load-balancer-ssl-policy: ELBSecurityPolicy-FS-2018-06
    zalando.org/skipper-routes: PathSubtree("/") && Header("X-Forwarded-Proto", "http")
      -> unverifiedAuditLog("sub") -> status(400) -> inlineContent("{\"title\":\"Gateway
      Rejected\",\"status\":400,\"detail\":\"TLS is required\",\"type\":\"https://cloud.docs.zalando.net/howtos/ingress/#redirect-http-to-https\"}")
      -> <shunt>
  creationTimestamp: "2021-10-27T07:47:15Z"
  generation: 1
  labels:
    controller-uid: 3929699d-cba0-11e8-90e2-0618dc6898fa
    deployment-id: d-nq71pi3pjq8siqfx3i5toz322
    pipeline-id: l-o49bo3978wd8mgk5o73i8aim6
  name: spp-homer-reject-http-route-spp-homer-master-367
  namespace: default
  ownerReferences:
  - apiVersion: zalando.org/v1
    blockOwnerDeletion: true
    controller: true
    kind: FabricGateway
    name: spp-homer
    uid: 3929699d-cba0-11e8-90e2-0618dc6898fa
  resourceVersion: "1379111142"
  uid: 2426bfed-1105-4101-ad2a-d48603a76d61
spec:
  rules:
  - host: spp-homer-master-367.smart-product-platform-test.zalan.do
    http:
      paths:
      - backend:
          service:
            name: spp-homer-master-367
            port:
              number: 8080
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - hostname: kube-ing-lb-vejw9uwox1cj-898356825914b821.elb.eu-central-1.amazonaws.com
